# snake1976

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
snake_project/: snake_game.py
snake_project/extra/game_environment/menu_files/: menu.py
snake_project/extra/game_environment/menu_files/console_img/: byebye.txt  controls.txt  loading.txt  snake.txt
snake_project/extra/game_environment/score_files/: score.py
snake_project/extra/tools/: asker.py  clean_console_command_setter.py  console_cleaner.py  git_repo_opener.py  key_setup.py  linux_functions.py  os_initializer.py  validators.py
snake_project/gamemodes/: battle_mode.py  classic_mode.py  survival_mode.py
snake_project/tests/: test_game_records.py  test_gamemodes.py
